# nvidia_dec_sample

./: CMakeLists.txt  Makefile  README.md  common.mk
AppDec/: AppDec.cpp  Makefile
